samples/_failures_safe/1761221735_8a3aec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04299947.c: In function ‘main’:
./samples/SAFE/__tmp_04299947.c:150:25: error: expected ‘;’ at end of input
  150 |     for (size_t i = 0; i
      |                         ^
      |                         ;
./samples/SAFE/__tmp_04299947.c:150:5: error: expected declaration or statement at end of input
  150 |     for (size_t i = 0; i
      |     ^~~
